bdr.BDR.scala.error
Compilation error:
BDR:3: error: ';' expected but '=' found.
  Var Mess: String=litMessage()
                  ^